multi: make max fee rate configurable

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -1590,6 +1590,11 @@
 ; window to allow more inputs to be added and thereby lower the fee per input.
 ; sweeper.batchwindowduration=30s
 
+; The max fee rate in sat/vb which can be used when sweeping funds. Setting
+; this value too low can result in transactions not being confirmed in time,
+; causing HTLCs to expire hence potentially losing funds.
+; sweeper.maxfeerate=1000
+
 
 [htlcswitch]
 
