workflows: change step name of sample conf check
We now also check the default values themselves and not just the
existence of the command line flags in the file.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -167,7 +167,7 @@ jobs:
         with:
           go-version: '${{ env.GO_VERSION }}'
 
-      - name: check all command line flags exist in sample-lnd.conf file
+      - name: check default values in sample-lnd.conf file
         run: make sample-conf-check
 
   ########################
