feature+lncfg: add new CLI flag to opt into taproot chans

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -1461,6 +1461,9 @@
 ; protocol.no-any-segwit=false
 
 
+; Set to enable support for the experimental taproot channel type.
+; protocol.simple-taproot-chans
+
 [db]
 
 ; The selected database backend. The current default backend is "bolt". lnd
