multi: remove Litecoin config options
This commit removes the `Litecoin`, `LtcMode` and `LitecoindMode`
members from the main LND `Config` struct. Since only the bitcoin
blockchain is now supported, this commit also deprecates the
`cfg.Bitcoin.Active` config option.

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -542,8 +542,8 @@
 
 [Bitcoin]
 
-; If the Bitcoin chain should be active. Atm, only a single chain can be
-; active.
+; DEPRECATED: If the Bitcoin chain should be active. This field is now ignored
+; since only the Bitcoin chain is supported.
 ; bitcoin.active=false
 
 ; The directory to store the chain's data within.
