sample-lnd.conf: replace ${chain} with "bitcoin"

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -54,7 +54,7 @@
 ; (old tls files must be deleted if changed)
 ; Default:
 ;   tlsextradomain=
-; Expample (option can be specified multiple times):
+; Example: (option can be specified multiple times):
 ;   tlsextradomain=my-node-domain.com
 
 ; If set, then all certs will automatically be refreshed if they're close to
@@ -120,7 +120,7 @@
 ; distinct location. By default, it is stored within lnd's network directory.
 ; Applications that are able to read this file, gain admin macaroon access.
 ; Default:
-;   adminmacaroonpath=~/.lnd/data/chain/${chain}/${network}/admin.macaroon
+;   adminmacaroonpath=~/.lnd/data/chain/bitcoin/${network}/admin.macaroon
 ; Example:
 ;   adminmacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/admin.macaroon
 
@@ -130,7 +130,7 @@
 ; the file to access RPCs which don't modify the state of the daemon. By
 ; default, it is stored within lnd's network directory.
 ; Default:
-;   readonlymacaroonpath=~/.lnd/data/chain/${chain}/${network}/readonly.macaroon
+;   readonlymacaroonpath=~/.lnd/data/chain/bitcoin/${network}/readonly.macaroon
 ; Example:
 ;   readonlymacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/readonly.macaroon
 
@@ -140,7 +140,7 @@
 ; The invoice macaroon allows users which can read the file to gain read and
 ; write access to all invoice related RPCs.
 ; Default:
-;   invoicemacaroonpath=~/.lnd/data/chain/${chain}/${network}/invoice.macaroon
+;   invoicemacaroonpath=~/.lnd/data/chain/bitcoin/${network}/invoice.macaroon
 ; Example:
 ;   invoicemacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/invoice.macaroon
 
@@ -295,7 +295,7 @@
 
 ; The target location of the channel backup file.
 ; Default:
-;   backupfilepath=~/.lnd/data/chain/${chain}/${network}/channel.backup
+;   backupfilepath=~/.lnd/data/chain/bitcoin/${network}/channel.backup
 ; Example:
 ;   backupfilepath=~/.lnd/data/chain/bitcoin/mainnet/channel.backup
 
@@ -1111,7 +1111,7 @@
 
 ; Path to the signer macaroon.
 ; Default:
-;   signrpc.signermacaroonpath=~/.lnd/data/chain/${chain}/${network}/signer.macaroon
+;   signrpc.signermacaroonpath=~/.lnd/data/chain/bitcoin/${network}/signer.macaroon
 ; Example:
 ;   signrpc.signermacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/signer.macaroon
 
@@ -1120,7 +1120,7 @@
 
 ; Path to the wallet kit macaroon.
 ; Default:
-;   walletrpc.walletkitmacaroonpath=~/.lnd/data/chain/${chain}/${network}/walletkit.macaroon
+;   walletrpc.walletkitmacaroonpath=~/.lnd/data/chain/bitcoin/${network}/walletkit.macaroon
 ; Example:
 ;   walletrpc.walletkitmacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/walletkit.macaroon
 
@@ -1129,7 +1129,7 @@
 
 ; Path to the chain notifier macaroon.
 ; Default:
-;   chainrpc.notifiermacaroonpath=~/.lnd/data/chain/${chain}/${network}/chainnotifier.macaroon
+;   chainrpc.notifiermacaroonpath=~/.lnd/data/chain/bitcoin/${network}/chainnotifier.macaroon
 ; Example:
 ;   chainrpc.notifiermacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/chainnotifier.macaroon
 
@@ -1155,7 +1155,7 @@
 
 ; Path to the router macaroon.
 ; Default:
-;   routerrpc.routermacaroonpath=~/.lnd/data/chain/${chain}/${network}/router.macaroon
+;   routerrpc.routermacaroonpath=~/.lnd/data/chain/bitcoin/${network}/router.macaroon
 ; Example:
 ;   routerrpc.routermacaroonpath=~/.lnd/data/chain/bitcoin/mainnet/router.macaroon
 
