multi: fix linter warnings with updated linter

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -1462,7 +1462,7 @@
 
 
 ; Set to enable support for the experimental taproot channel type.
-; protocol.simple-taproot-chans
+; protocol.simple-taproot-chans=false
 
 [db]
 
