--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -186,6 +186,8 @@ jobs:
           - unit tags="kvdb_postgres"
           - unit tags="kvdb_sqlite"
           - btcd unit-race
+          - unit-module
+
     steps:
       - name: git checkout
         uses: actions/checkout@v3
@@ -216,6 +218,7 @@ jobs:
         with:
           path-to-profile: coverage.txt
           parallel: true
+
 
   ########################
   # run ubuntu integration tests
