github+Makefile: add new action `make tidy-module-check`
This commit adds `tidy-module` and `tidy-module-check` to make sure the
modules are always tidy.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -131,6 +131,9 @@ jobs:
       - name: check code format
         run: make fmt-check
 
+      - name: check go modules tidiness 
+        run: make tidy-module-check
+
       - name: lint
         run: GOGC=50 make lint
 
