sample-lnd.conf: fix typo

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -106,7 +106,7 @@
 
 ; Disable macaroon authentication. Macaroons are used as bearer credentials to
 ; authenticate all RPC access. If one wishes to opt out of macaroons, uncomment
-; the line below.
+; and set to true the line below.
 ; no-macaroons=false
 
 ; Enable free list syncing for the default bbolt database. This will decrease
@@ -250,7 +250,7 @@
 ; maxbackoff=1h
 
 ; The timeout value for network connections.
-; Valid uints are {ms, s, m, h}.
+; Valid units are {ms, s, m, h}.
 ; connectiontimeout=2m
 
 ; Debug logging level.
