scripts: kill lnd on windows to access log files (#8076)
For some reason lnd doesn't properly shut down on some windows itests,
and the process still running makes it impossible to access its log
files.
So for the Windows integration test, we attempt to kill the whole
process tree once the process indicates it is done.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -298,6 +298,11 @@ jobs:
 
       - name: run itest
         run: make itest-parallel windows=1
+        
+      - name: kill any remaining lnd processes
+        if: ${{ failure() }}
+        shell: powershell
+        run: taskkill /IM lnd-itest.exe /T /F
 
       - name: Zip log files on failure
         if: ${{ failure() }}
