lntest: add http header timeout to config

--- a/sample-lnd.conf
+++ b/sample-lnd.conf
@@ -519,6 +519,9 @@
 ; intelligence services.
 ; color=#3399FF
 
+; The maximum duration that the server will wait before timing out reading
+; the headers of an HTTP request.
+; http-header-timeout=5s
 
 [prometheus]
 
